tests/trybuild/duration_fail.stderr
error: failed to parse string as Duration: expected number at 0
 --> tests/trybuild/duration_fail.rs:2:19
  |
2 |   lits::duration!("not-a-duration");
  |                   ^^^^^^^^^^^^^^^^
