tests/trybuild/duration_fail.rs
fn main() {
  lits::duration!("not-a-duration");
}
